
name:                scryptic
version:             0.1.0.0
synopsis:            Scripting engine for apps
description:         Simple scripting language for controlling apps
license:             GPL-3
license-file:        LICENSE
author:              John W. Lato
maintainer:          jwlato@gmail.com
copyright:           Tsuru Capital, 2014
category:            Language
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.16

library
  ghc-options:         -Wall
  exposed-modules:     Scryptic,
                       Scryptic.Monad,
                       Scryptic.Parser,
                       Scryptic.Pure,
                       Scryptic.Runtime,
                       Scryptic.RuntimeOptions,
                       Scryptic.Scrypt,
                       Scryptic.Types
                       Scryptic.Weak
  -- other-modules:       
  other-extensions:    GeneralizedNewtypeDeriving,
                       MultiParamTypeClasses,
                       CPP,
                       FlexibleContexts,
                       FlexibleInstances,
                       NoMonomorphismRestriction,
                       ScopedTypeVariables,
                       StandaloneDeriving,
                       TemplateHaskell,
                       DeriveDataTypeable,
                       ExistentialQuantification,
                       LambdaCase,
                       RankNTypes
  build-depends:       base >=4.6 && <4.8,
                       mtl >=2.1 && <2.2,
                       lens >=3.8 && <4.1,
                       containers >=0.5 && <0.6,
                       transformers >=0.3 && <0.4,
                       parsec >=3.1 && <3.2,
                       stm >=2.4 && <2.5,
                       text >=0.11 && <2.0
  hs-source-dirs:      src
  default-language:    Haskell2010
