
name:                scryptic
version:             0.2.0.0
synopsis:            Scripting engine for apps
description:         Simple scripting language for controlling apps
license:             GPL-3
license-file:        LICENSE
author:              John W. Lato
maintainer:          jwlato@gmail.com
copyright:           Tsuru Capital, 2014
category:            Language
build-type:          Simple
extra-source-files:  src/Scryptic/Language/DocScrypt.txt, src/Scrypt.cf
cabal-version:       >=1.16

library
  exposed-modules:     Scryptic,
                       Scryptic.Language.AbsScrypt
                       Scryptic.Language.ErrM
                       Scryptic.Language.LayoutScrypt
                       Scryptic.Language.LexScrypt
                       Scryptic.Language.ParScrypt
                       Scryptic.Language.PrintScrypt
                       Scryptic.Monad,
                       Scryptic.Parse,
                       Scryptic.Pure,
                       Scryptic.Runtime,
                       Scryptic.Runtime.Engine,
                       Scryptic.Runtime.Options,
                       Scryptic.Scrypt,
                       Scryptic.Types
                       Scryptic.Weak
  -- other-modules:       
  other-extensions:    GeneralizedNewtypeDeriving,
                       MultiParamTypeClasses,
                       CPP,
                       FlexibleContexts,
                       FlexibleInstances,
                       NoMonomorphismRestriction,
                       ScopedTypeVariables,
                       StandaloneDeriving,
                       TemplateHaskell,
                       DeriveDataTypeable,
                       DeriveGeneric,
                       ExistentialQuantification,
                       LambdaCase,
                       RankNTypes
  build-depends:       base >=4.6 && <4.8,
                       array >= 0.4 && < 0.6,
                       mtl >=2.1 && <2.3,
                       lens >= 4.0 && <4.4,
                       containers >=0.5 && <0.6,
                       exceptions >= 0.5 && < 0.7,
                       transformers >=0.3 && <0.5,
                       parsec >=3.1 && <3.2,
                       stm >=2.4 && <2.5,
                       text >=0.11 && <2.0
  hs-source-dirs:      src
  default-language:    Haskell2010
  build-tools:         happy, alex
